syntax = "proto3";

package io.ringbroker.proto.test;

import "google/protobuf/timestamp.proto";
option java_outer_classname = "EventsProto";

/**
 * Emitted when a new order is created.
 */
message OrderCreated {
  string order_id = 1;
  string customer = 2;
  google.protobuf.Timestamp created_at = 3;
}

/**
 * Emitted when an existing order is cancelled.
 */
message OrderCancelled {
  string order_id = 1;
  string reason = 2;
  google.protobuf.Timestamp cancelled_at = 3;
}
